--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ressursbibliotek</title>
+    <link rel="stylesheet" href="styles.css"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
+    <header>
+        <h1>Ressursbibliotek</h1>
+    </header>
+
+    <nav>
+        <button data-category="HTML">HTML</button>
+        <button data-category="CSS">CSS</button>
+        <button data-category="JavaScript">JavaScript</button>
+        <button data-category="React">React</button>
+        <button data-category="Sanity">Sanity and headless CMS</button>
+    </nav>
+
+    <main>
+        <section id="resource-container">
+        </section>
+    </main>
+
+    <script src="ressurser.js"></script>
+    <script src="script.js"></script> 
+</body>
+</html>
